Restructure Revision (relocate roadmaps/dashboards); enrich cheat sheets for 4-5 YOE; add Git cheat sheet